cdebconf (0.131) UNRELEASED; urgency=low

  [ Frans Pop ]
  * gtk frontend: remove special handling for countrychooser/country-name as
    that template no longer exists. Requires: localechooser (>= 2.02).

  [ Max Vozeler ]
  * Fix *_can_align() function signatures to match the prototype.

 -- Frans Pop <fjp@debian.org>  Sun, 20 Apr 2008 18:21:40 +0200

cdebconf (0.130) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Do not include strutl.h in frontend.h as it is not needed.
    (Closes: #475975)
  * Ship strutl.h in libdebconfclient0-dev for cdebconf plugins using those
    functions.

 -- Jérémy Bobbio <lunar@debian.org>  Mon, 14 Apr 2008 23:04:28 +0200

cdebconf (0.129) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Add support for "directives" in templates: those are special variables in
    the form ${!DIRECTIVE} which content are returned by the current frontend.
  * Add a new "align" capability to the protocol, currently implemented by the
    text, newt and gtk frontends.  This allows to "columnize" select and
    multisplect questions by using the ${!TAB} directive as a field separator.

  [ Frans Pop ]
  * Remove Martin Sjogren, Matt Kraai and Randolph Chung as Uploaders with
    many thanks for their past contributions.

  [ Jérémy Bobbio ]
  * Right align item numbers in select and multiselect prompts in the text
    frontend.  Thanks Ferenc Wagner for the patch.
  * Bump Standards-Version to 3.7.3, no changes required.

  [ Updated translations ]
  * Marathi (mr.po)
  * Panjabi (pa.po) by Amanpreet Singh Alam
  * Portuguese (pt.po) by Miguel Figueiredo
  * Thai (th.po) by Theppitak Karoonboonyanan

 -- Jérémy Bobbio <lunar@debian.org>  Tue, 08 Apr 2008 20:41:45 +0200

cdebconf (0.128) unstable; urgency=low

  [ Updated translations ]
  * Indonesian (id.po) by Arief S Fitrianto
  * Turkish (tr.po) by Recai Oktaş

 -- Otavio Salvador <otavio@ossystems.com.br>  Fri, 15 Feb 2008 17:00:32 -0200

cdebconf (0.127) unstable; urgency=low

  [ Colin Watson ]